--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.example</groupId>
-    <artifactId>java-getting-started</artifactId>
+    <groupId>com.moodi</groupId>
+    <artifactId>Confession-Bot</artifactId>
     <version>1.0</version>
 
-    <name>java-getting-started</name>
+    <name>Confession-Bot</name>
 
     <properties>
         <java.version>1.8</java.version>
@@ -26,6 +26,11 @@
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
             <version>4.2.0_228</version>
+        </dependency>
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.0-801.jdbc4</version>
         </dependency>
     </dependencies>
 
