--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,1 @@
-spring.datasource.url: ${JDBC_DATABASE_URL:}
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.maximum-pool-size=10
-
-spring.thymeleaf.mode=HTML
-
-logging.level.org.springframework=INFO
-
-spring.profiles.active=production
-
-server.port=${PORT:5000}
+discord.token:ODE0NTg2NTA0ODM5NTYxMjM3.YDgAzQ.i4mA__hH3P-3bf5puS2Q_NY-qys
